Solicitudes, Aceptacion y Vista de generadas

--- a/Web.From/ConCentraAppWeb/src/app/consultar-placas-generadas/consultar-placas-generadas.component.html
+++ b/Web.From/ConCentraAppWeb/src/app/consultar-placas-generadas/consultar-placas-generadas.component.html
@@ -9,147 +9,98 @@
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
             <li class="breadcrumb-item text-sm"><a class="opacity-5 text-dark" href="javascript:;">Pages</a></li>
-            <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Home</li>
+            <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Placas Generadas</li>
           </ol>
           <h6 class="font-weight-bolder mb-0">{{tittle}}</h6>
+          <br>
+          <a class="text-body text-sm font-weight-bold mb-0 icon-move-right mt-auto" routerLink="/">
+            <i class="fas fa-arrow-left text-sm ms-1" aria-hidden="true"></i>
+
+            Volver
+           </a>
         </nav>
 
       </div>
     </nav>
     <!-- End Navbar -->
     <div class="container-fluid py-4">
+
+
+      <div class="container-fluid py-4">
+        <div class="col-xl-4 col-lg-5 col-md-7">
+          <div class="card z-index-0">
+            <div class="card-header text-center" style="margin-top: 4%;">
+              <h3 class="text-sm mb-0 text-capitalize font-weight-bold">Busqueda Filtrada</h3>
+            </div>
+            <div class="card-body">
+              <form role="form text-left" [formGroup]="form" (submit)="buscar()">
+                <div class="mb-3">
+                  <input formControlName="Cedula" class="form-control" placeholder="Cedula">
+                </div>
+                <div class="text-center">
+                  <button type="submit" class="btn bg-gradient-dark w-100 my-4 mb-2">Buscar</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      <br>
+
       <div class="row">
-        <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
-          <div class="card">
-            <div class="card-body p-3">
-              <div class="row">
-                <div class="col-8">
-                  <div class="numbers">
-                    <p class="text-sm mb-0 text-capitalize font-weight-bold">Solicitudes Pendientes</p>
-                    <h5 class="font-weight-bolder mb-0">
-                      {{solicitudes}}
-                    </h5>
-                  </div>
-                </div>
-                <div class="col-4 text-end">
-                  <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
-                    <i class="ni ni-world text-lg opacity-10" aria-hidden="true"></i>
-                  </div>
-                </div>
+        <div class="col-12">
+          <div class="card mb-4">
+            <div class="card-header pb-0">
+              <h6>Placas table</h6>
+            </div>
+            <div class="card-body px-0 pt-0 pb-2">
+              <div class="table-responsive p-0">
+                <table class="table align-items-center mb-0">
+                  <thead>
+                    <tr>
+                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Tipo Placa</th>
+                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2"># Placa</th>
+                      <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Nombre Completo</th>
+                      <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Fecha de Venta</th>
+                      <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Valor Pagado</th>
+                      <th class="text-secondary opacity-7"></th>
+                    </tr>
+                  </thead>
+                  <tbody>
+
+                    <tr *ngFor="let item of placas">
+                      <td>
+                        <div class="d-flex px-2 py-1">
+                          <div class="d-flex flex-column justify-content-center">
+                            <h6 class="mb-0 text-sm">{{item.tipoPlaca}}</h6>
+                            <!--<p class="text-xs text-secondary mb-0">john@creative-tim.com</p>-->
+                          </div>
+                        </div>
+                      </td>
+                      <td>
+                        <p class="text-xs font-weight-bold mb-0" style="font-weight: bold;">{{item.numeroPlaca}}</p>
+                      </td>
+                      <td class="align-middle text-center text-sm">
+                        <!--<span class="badge badge-sm bg-gradient-success">Online</span>-->
+                        <p class="text-xs font-weight-bold mb-0">{{item.nombres + " " + item.apellidos}}</p>
+                      </td>
+                      <td class="align-middle text-center">
+                        <span class="text-secondary text-xs font-weight-bold">04/08/2023</span>
+                      </td>
+                      <td class="align-middle text-center">
+                        <span class="text-secondary text-xs font-weight-bold">{{item.valorTotalPlaca}}</span>
+                      </td>
+                      <td class="align-middle">
+                       <span class="badge badge-sm bg-gradient-success">Activo</span>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
               </div>
             </div>
           </div>
         </div>
-
-        <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
-          <div class="card">
-            <div class="card-body p-3">
-              <div class="row">
-                <div class="col-8">
-                  <div class="numbers">
-                    <p class="text-sm mb-0 text-capitalize font-weight-bold">Usuarios Registrados</p>
-                    <h5 class="font-weight-bolder mb-0">
-                      {{usuarios}}
-                    </h5>
-                  </div>
-                </div>
-                <div class="col-4 text-end">
-                  <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
-                    <i class="ni ni-world text-lg opacity-10" aria-hidden="true"></i>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
       </div>
-      <div class="row mt-4">
-        <div class="col-lg-6 mb-lg-0 mb-4">
-          <div class="card">
-            <div class="card-body p-3">
-              <div class="row">
-                <div class="col-lg-6">
-                  <div class="d-flex flex-column h-100">
-                    <p class="mb-1 pt-2 text-bold">Registrar Placas</p>
-                    <h5 class="font-weight-bolder">Mantenimiento</h5>
-                    <p class="mb-5">{{registrar_placas_descripcion}}</p>
-                    <a class="text-body text-sm font-weight-bold mb-0 icon-move-right mt-auto" routerLink="/registro-placas">
-                     Entrar
-                      <i class="fas fa-arrow-right text-sm ms-1" aria-hidden="true"></i>
-                    </a>
-                  </div>
-                </div>
-                <div class="col-lg-5 ms-auto text-center mt-5 mt-lg-0">
-                  <div class="bg-gradient-primary border-radius-lg h-100">
-                    <img src="../assets/img/shapes/waves-white.svg" class="position-absolute h-100 w-50 top-0 d-lg-block d-none" alt="waves">
-                    <div class="position-relative d-flex align-items-center justify-content-center h-100">
-                      <img class="w-100 position-relative z-index-2 pt-4" src="../assets/img/illustrations/rocket-white.png" alt="rocket">
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6 mb-lg-0 mb-4">
-          <div class="card">
-            <div class="card-body p-3">
-              <div class="row">
-                <div class="col-lg-6">
-                  <div class="d-flex flex-column h-100">
-                    <p class="mb-1 pt-2 text-bold">Consultar Solicitudes</p>
-                    <h5 class="font-weight-bolder">Mantenimiento</h5>
-                    <p class="mb-5">{{consultar_solicitudes_descripcion}}</p>
-                    <a class="text-body text-sm font-weight-bold mb-0 icon-move-right mt-auto" routerLink="/consultar-placas">
-                      Entrar
-                      <i class="fas fa-arrow-right text-sm ms-1" aria-hidden="true"></i>
-                    </a>
-                  </div>
-                </div>
-                <div class="col-lg-5 ms-auto text-center mt-5 mt-lg-0">
-                  <div class="bg-gradient-primary border-radius-lg h-100">
-                    <img src="../assets/img/shapes/waves-white.svg" class="position-absolute h-100 w-50 top-0 d-lg-block d-none" alt="waves">
-                    <div class="position-relative d-flex align-items-center justify-content-center h-100">
-                      <img class="w-100 position-relative z-index-2 pt-4" src="../assets/img/illustrations/rocket-white.png" alt="rocket">
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-6 mb-lg-0 mb-4" style="margin-top: 5%;">
-          <div class="card">
-            <div class="card-body p-3">
-              <div class="row">
-                <div class="col-lg-6">
-                  <div class="d-flex flex-column h-100">
-                    <p class="mb-1 pt-2 text-bold">Placas Generadas</p>
-                    <h5 class="font-weight-bolder">Mantenimiento</h5>
-                    <p class="mb-5">{{consultar_placas_descripcion}}</p>
-                    <a class="text-body text-sm font-weight-bold mb-0 icon-move-right mt-auto" routerLink="/consultar-placas-generadas">
-                      Entrar
-                      <i class="fas fa-arrow-right text-sm ms-1" aria-hidden="true"></i>
-                    </a>
-                  </div>
-                </div>
-                <div class="col-lg-5 ms-auto text-center mt-5 mt-lg-0">
-                  <div class="bg-gradient-primary border-radius-lg h-100">
-                    <img src="../assets/img/shapes/waves-white.svg" class="position-absolute h-100 w-50 top-0 d-lg-block d-none" alt="waves">
-                    <div class="position-relative d-flex align-items-center justify-content-center h-100">
-                      <img class="w-100 position-relative z-index-2 pt-4" src="../assets/img/illustrations/rocket-white.png" alt="rocket">
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-
 
       <footer class="footer pt-3  ">
         <div class="container-fluid">
