--- a/Web.From/ConCentraAppWeb/src/app/registro-placas/registro-placas.component.html
+++ b/Web.From/ConCentraAppWeb/src/app/registro-placas/registro-placas.component.html
@@ -13,7 +13,7 @@
           </ol>
           <h6 class="font-weight-bolder mb-0">{{tittle}}</h6>
           <br>
-          <a class="text-body text-sm font-weight-bold mb-0 icon-move-right mt-auto" routerLink="/">
+          <a class="text-body text-sm font-weight-bold mb-0 icon-move-right mt-auto" routerLink="/home">
             <i class="fas fa-arrow-left text-sm ms-1" aria-hidden="true"></i>
 
             Volver
